--- a/src/LibrarianFunctions.form
+++ b/src/LibrarianFunctions.form
@@ -122,6 +122,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Print Borrowing Report"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="jButton2">
           <Properties>
@@ -136,6 +139,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Search For Books"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel6">
           <Properties>
