--- a/src/NewJFrame.form
+++ b/src/NewJFrame.form
@@ -146,6 +146,9 @@
             <Property name="text" type="java.lang.String" value="System Admin"/>
             <Property name="toolTipText" type="java.lang.String" value=""/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jRadioButton2ActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="jButton1">
           <Properties>
